[package]
name = "zebrax"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio       = { version = "1", features = ["full"] }
hyper       = { version = "1", features = ["full"] }
hyper-util  = { version = "0.1", features = ["full"] }
tower       = "0.4"
serde       = { version = "1", features = ["derive"] }
toml        = "0.8"
clap        = { version = "4", features = ["derive"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow      = "1"
